// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`Issue Describe Command - Help Text 1`] = `
"stdout:
"Usage: issue describe [options] [issueId]

Print the issue title and Linear-issue trailer

Options:
  -r, --references  Use 'References' instead of 'Fixes' for the Linear issue
                    link
  -h, --help        display help for command
"
stderr:
"""
`;

exports[`Issue Describe Command - With Mock Server 1`] = `
"stdout:
"TEST-123 Fix authentication bug in login flow

Linear-issue: Fixes TEST-123
Linear-issue-url: https://linear.app/test-team/issue/TEST-123/fix-authentication-bug-in-login-flow
"
stderr:
"""
`;

exports[`Issue Describe Command - With References Flag 1`] = `
"stdout:
"TEST-456 Update user profile page

Linear-issue: References TEST-456
Linear-issue-url: https://linear.app/test-team/issue/TEST-456/update-user-profile-page
"
stderr:
"""
`;

exports[`Issue Describe Command - Issue Not Found 1`] = `
"stdout:
""
stderr:
"✗ Failed to get issue description: Issue not found: TEST-999
""
`;
